--- a/volunteerEPICS/volunteers/templates/volunteers/signout.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/signout.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Sign in Page using Templete</h1>
+    <h1>Sign out Page using Templete thank you for making magic!</h1>
   </body>
 </html>
