--- a/volunteerEPICS/volunteers/templates/volunteers/signup.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/signup.html
@@ -1,10 +1,323 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!--Start of html document -->
+<html lang="en">
+<!---------------------------------------------------------------->
+<!--       Head is the items included in the top of the page    -->
+<!---------------------------------------------------------------->
   <head>
+    <!-- This ensures proper rendering and touch zooming for all -->
+    <!-- mobile devices -->
     <meta charset="utf-8">
-    <title></title>
+  <!--  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+
+    <!--            Ignore this section              ------------->
+    <!-- This is linking to the CSS Sign_In File and Bootstrap -->
+    <link rel="stylesheet" href="sign_in.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.js">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!---------------------------------------------------------->
+    <title>Salvation Army Volunteer Registration</title>
+
+    <!-- Navigation bar at top of page -->
+    <nav class="navbar navbar-dark bg-dark" style="background-color: #e3f2fd;">
+      <!-- Placement of Salvation Army Image -->
+      <a class="navbar-brand">
+        <img src="salvation_army.jpg" alt="Salvation Army Logo" height="60"
+     width="60" class="d-inline-block align-top-left"/>
+   </a>
+      <!------------------------------------>
+      <!--Creation of the Donation Button -->
+      <!------------------------------------>
+
+      <form class="form-inline">
+        <button type="button" style="margin:5px;" class="btn btn-danger">Volunteer Registration</button>
+        <button type="button" style="margin:5px;" class="btn btn-danger">Volunteer Sign In</button>
+        <button type="button" style="margin:5px;" class="btn btn-danger">Employee Login</button>
+        <button type="button" style="margin:5px;" class="btn btn-danger">Donate</button>
+      </form>
+
+    </nav>
+    <!-- End of Navigaton Bar -->
+    <br>
+
+    <h2 align="center">Volunteer Registration Form</h2>
+
   </head>
-  <body>
-    <<h1>Sign in Page using Templete</h1>
-  </body>
+
+<!--  Kim, Mikayla and James, ignore the <br>, all they do is seperate the -->
+<!-- page for organization -->
+<!---------------------------------------------------------------->
+
+<br>
+<br>
+<!----------------------------------------------------------------->
+
+
+<!-------------------------------------------------->
+<!-- Creation of Form for Signing In Volunteers ---->
+<!--Kim and James this is the most important ------>
+<!--section for you guys. ------------------------->
+<!------------------------------------------------->
+
+<body>
+   <!-- <form> -->
+    <!--First name and Last name text box -->
+    <div class="container">
+
+      <!-------------------------------------------------------------------->
+      <!-- Creates an invisible table to organize content-->
+      <!-- This section of the code will make a 1 x 4 table to organize -->
+      <!-- the textboxes for First and Last name -->
+      <!-------------------------------------------------------------------->
+
+      <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
+        <!--Create the first column-->
+
+        <!--Creates the second column which has the First Name Textbox -->
+        <!--------------------------------------------------------------->
+        <!--    This is the first name Data Set --->
+        <div class="col">
+          <label for="name"><b>First Name:</b></label>
+          <section class="first_name">
+            <input type="text" name="first" id="first">
+          </section>
+        </div>
+        <!---------------------------------------------------------------->
+
+        <!--Creates the third column which has the Last name textbox -->
+        <!------------------------------------------------------------->
+        <!--  This  is the last name Data Set -->
+
+        <div class="col">
+          <section class="last_name">
+            <label for="name"><b>Last Name:</b></label>
+              <input type="text" name="last" id="last">
+          </section>
+        </div>
+        <!----------------------------------------------------------------->
+
+        <div class="col">
+        <!-- Creates the second column for Phone Number input-->
+        <!----------------------------------------------------->
+        <!-- This is the phone number Data set -->
+          <section class="phone_number">
+            <label for="phone"><b>Phone Number:</b></label>
+              <input type="text" name ="pho_num" id="pho_num">
+          </section>
+        </div>
+
+        <div class="col">
+          <section class="email">
+            <label for="email"><b>Email Address:</b></label>
+              <input type="text" name ="email" id="email">
+          </section>
+        </div>
+
+      </div>
+
+      <br>
+
+      <br>
+
+    <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
+
+      <div class="col">
+        <form>
+        <section class="emergency">
+          <label for="contact"><b>Emergency Contact Name:</b></label>
+            <input type="text" name="emergency" id="emergency">
+          </section>
+        </form>
+      </div>
+
+      <div class="col">
+      <form>
+        <section class="emerg_num">
+          <label for="emerg_num"><b>Emergency Contact Number:</b></label>
+            <input type="text" name="emerg_num" id="emerg_num">
+        </section>
+      </form>
+      </div>
+
+      <div class="col">
+        <form>
+          <section class="employ_name">
+            <label for="employ_name"><b>Employer Name:</b></label>
+              <input type="text" name="employer" id="employer">
+          </section>
+        </form>
+      </div>
+
+      <div class="col">
+        <form>
+        <label for="gender"><b>Gender:</b></label>
+        <select required id="gender">
+          <option disabled selected></option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
+        </form>
+      </div>
+
+      <div class="col"></div>
+
+    </div>
+
+    <br>
+
+    <br>
+
+    <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
+
+
+        <div class="col">
+          <form><b>Date of Birth:</b><input type="date" name="bday"></form>
+        </div>
+
+
+        <div class="col">
+            <form>
+            <label for="state"><b>State (Residency):</b></label>
+            <select required id="state">
+              <option disabled selected></option>
+              <option value="AL">Alabama</option>
+              <option value="AK">Alaska</option>
+              <option value="AZ">Arizona</option>
+              <option value="AR">Arkansas</option>
+              <option value="CA">California</option>
+              <option value="CO">Colorado</option>
+              <option value="CT">Connecticut</option>
+              <option value="DE">Delaware</option>
+              <option value="DC">District Of Columbia</option>
+              <option value="FL">Florida</option>
+              <option value="GA">Georgia</option>
+              <option value="HI">Hawaii</option>
+              <option value="ID">Idaho</option>
+              <option value="IL">Illinois</option>
+              <option value="IN">Indiana</option>
+              <option value="IA">Iowa</option>
+              <option value="KS">Kansas</option>
+              <option value="KY">Kentucky</option>
+              <option value="LA">Louisiana</option>
+              <option value="ME">Maine</option>
+              <option value="MD">Maryland</option>
+              <option value="MA">Massachusetts</option>
+              <option value="MI">Michigan</option>
+              <option value="MN">Minnesota</option>
+              <option value="MS">Mississippi</option>
+              <option value="MO">Missouri</option>
+              <option value="MT">Montana</option>
+              <option value="NE">Nebraska</option>
+              <option value="NV">Nevada</option>
+              <option value="NH">New Hampshire</option>
+              <option value="NJ">New Jersey</option>
+              <option value="NM">New Mexico</option>
+              <option value="NY">New York</option>
+              <option value="NC">North Carolina</option>
+              <option value="ND">North Dakota</option>
+              <option value="OH">Ohio</option>
+              <option value="OK">Oklahoma</option>
+              <option value="OR">Oregon</option>
+              <option value="PA">Pennsylvania</option>
+              <option value="RI">Rhode Island</option>
+              <option value="SC">South Carolina</option>
+              <option value="SD">South Dakota</option>
+              <option value="TN">Tennessee</option>
+              <option value="TX">Texas</option>
+              <option value="UT">Utah</option>
+              <option value="VT">Vermont</option>
+              <option value="VA">Virginia</option>
+              <option value="WA">Washington</option>
+              <option value="WV">West Virginia</option>
+              <option value="WI">Wisconsin</option>
+              <option value="WY">Wyoming</option>
+            </select>
+            </form>
+        </div>
+
+        <div class="col">
+          <form>
+              <label for="zip"><b>Zip(Area) Code:</b></label>
+                <input type="text" name="zip" id="zip">
+            </section>
+          </form>
+        </div>
+
+
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
+
+        <div class="col">
+        <form>
+          <style>
+          .newspaper {
+            -webkit-column-count: 2; /* Chrome, Safari, Opera */
+            -moz-column-count: 2; /* Firefox */
+            column-count: 2;
+          }
+          </style>
+              <label for="Volunteer Iterests"><b>Please select the Volunteer Positions that interest you:</b></label>
+              <div class="newspaper">
+              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="food_pantry">Food Pantry</label></span><br/>
+              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="food_service">Food Service</label></span><br/>
+              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="senior_services">Senior Services</label></span><br/>
+              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="boy_girls_glub">Boy and Girls Club</label></span><br/>
+              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="food_distributions">Monthly Food Distributions</label></span><br/>
+              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="maintenance">Maintenance/House Keeping</label></span><br/>
+              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="life_skills">Life Skills (Teacher/Consultant)</label></span><br/>
+              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="shelter">Family Emergency Shelter</label></span><br/>
+              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="computer_lab">Computer Lab</label></span><br/>
+              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="closet">Clothes Closet</label></span><br/>
+              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="other">Other</label></span><br/>
+
+              </div>
+
+          </form>
+        </div>
+
+        <div class="col"></div>
+        <div class="col">
+          <form>
+          <div class="form-group">
+            <label for="comment"><b>Comment:</b></label>
+            <textarea class="form-control" rows="5" id="comment"></textarea>
+          </div>
+        </form>
+        </div>
+
+        </div>
+
+    <br>
+    <br>
+
+<div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
+
+  <div class="col"></div
+
+  <div class="col">
+    <form class="form-inline">
+      <button align="center" type="button" class="btn btn-danger btn-lg">Submit Form</button>
+    </form>
+  </div>
+
+  <div class="col"></div>
+  </div>
+
+
+<!--  </form> -->
+</body>
+
+    <br>
+
+<img src="san_antonio_skyline.jpg" class="img-fluid" alt="Responsive image">
+
 </html>
+<!-- End of HTML Document -->
