--- a/volunteerEPICS/volunteers/templates/volunteers/thanks.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/thanks.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Sign in Page using Templete</h1>
+    <h1>Thank you page using Templete</h1>
   </body>
 </html>
