--- a/volunteerEPICS/volunteers/templates/volunteers/volunteershome.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/volunteershome.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Sign in Page using Templete</h1>
+    <h1>Home page for volunteers</h1>
   </body>
 </html>
