updates to templetes
buttons are now linked, base html code extends across all template pages. testing the editing on admin site with testing.html file please ignore that.

--- a/volunteerEPICS/volunteers/templates/volunteers/signout.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/signout.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Sign out Page using Templete thank you for making magic!</h1>
-  </body>
-</html>
+
+
+{% extends 'volunteers/base.html'%}
+
+{%block title %}
+Thank you
+{% endblock %}
+
+
+
+{%block content %}
+<h1>Sign out Page using Templete thank you for making magic!</h1>
+{% endblock %}
