--- a/volunteerEPICS/volunteers/templates/volunteers/volunteershome.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/volunteershome.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Home page for volunteers</h1>
-  </body>
-</html>
+
+
+{% extends 'volunteers/base.html'%}
+
+{%block title %}
+Thank you
+{% endblock %}
+
+
+
+{%block content %}
+  <h1>Home page for volunteers</h1>
+{% endblock %}
