--- a/volunteerEPICS/volunteers/templates/volunteers/signup.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/signup.html
@@ -59,11 +59,15 @@ Sign up Page!
         <!--Creates the second column which has the First Name Textbox -->
         <!--------------------------------------------------------------->
         <!--    This is the first name Data Set --->
-        <div class="col">
-          <label for="name"><b>First Name:</b></label>
-          <section class="first_name">
-            <input type="text" name="first" id="first">
+  <div class="col">
+        <form action"" method="post">
+          {% csrf_token %}
+          <label for="username"><b>Username:</b></label>
+          <section class="username">
+            {{form.username}}
           </section>
+
+
         </div>
         <!---------------------------------------------------------------->
 
@@ -72,10 +76,12 @@ Sign up Page!
         <!--  This  is the last name Data Set -->
 
         <div class="col">
-          <section class="last_name">
-            <label for="name"><b>Last Name:</b></label>
-              <input type="text" name="last" id="last">
+          <label for="name"><b>First Name:</b></label>
+          <section class="first_name">
+            {{form.First_name}}
           </section>
+
+
         </div>
         <!----------------------------------------------------------------->
 
@@ -83,17 +89,30 @@ Sign up Page!
         <!-- Creates the second column for Phone Number input-->
         <!----------------------------------------------------->
         <!-- This is the phone number Data set -->
-          <section class="phone_number">
-            <label for="phone"><b>Phone Number:</b></label>
-              <input type="text" name ="pho_num" id="pho_num">
-          </section>
+
+        <section class="last_name">
+          <label for="name"><b>Last Name:</b></label>
+            {{form.Last_name}}
+        </section>
+
         </div>
 
         <div class="col">
-          <section class="email">
-            <label for="email"><b>Email Address:</b></label>
-              <input type="text" name ="email" id="email">
+        <b>Gender:</b> {{form.gender}}
+          </div>
+
+          <div class="col">
+            <b>Date of Birth:</b> {{form.birth_date}}
+          </div>
+
+
+        <div class="col">
+          <section class="phone_number">
+            <label for="phone"><b>Phone Number:</b></label>
+              {{form.phone}}
           </section>
+
+
         </div>
 
       </div>
@@ -105,41 +124,47 @@ Sign up Page!
     <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
 
       <div class="col">
-        <form>
+        <section class="email">
+          <label for="email"><b>Email Address:</b></label>
+            {{form.email}}
+        </section>
+
+
+      </div>
+
+      <div class="col">
         <section class="emergency">
           <label for="contact"><b>Emergency Contact Name:</b></label>
-            <input type="text" name="emergency" id="emergency">
+           {{form.employer_name}}
           </section>
-        </form>
+
+
       </div>
 
       <div class="col">
-      <form>
+
         <section class="emerg_num">
           <label for="emerg_num"><b>Emergency Contact Number:</b></label>
-            <input type="text" name="emerg_num" id="emerg_num">
+            {{form.emergency_contact_phone}}
         </section>
-      </form>
+
+
+
       </div>
 
       <div class="col">
-        <form>
+
+
+        <div class="col">
+
           <section class="employ_name">
             <label for="employ_name"><b>Employer Name:</b></label>
-              <input type="text" name="employer" id="employer">
+              {{form.employer_name}}
           </section>
-        </form>
-      </div>
 
-      <div class="col">
-        <form>
-        <label for="gender"><b>Gender:</b></label>
-        <select required id="gender">
-          <option disabled selected></option>
-          <option value="male">Male</option>
-          <option value="female">Female</option>
-        </select>
-        </form>
+        </div>
+
+
       </div>
 
       <div class="col"></div>
@@ -153,79 +178,32 @@ Sign up Page!
     <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
 
 
-        <div class="col">
-          <form><b>Date of Birth:</b><input type="date" name="bday"></form>
-        </div>
+
 
 
         <div class="col">
-            <form>
+
             <label for="state"><b>State (Residency):</b></label>
-            <select required id="state">
-              <option disabled selected></option>
-              <option value="AL">Alabama</option>
-              <option value="AK">Alaska</option>
-              <option value="AZ">Arizona</option>
-              <option value="AR">Arkansas</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="CT">Connecticut</option>
-              <option value="DE">Delaware</option>
-              <option value="DC">District Of Columbia</option>
-              <option value="FL">Florida</option>
-              <option value="GA">Georgia</option>
-              <option value="HI">Hawaii</option>
-              <option value="ID">Idaho</option>
-              <option value="IL">Illinois</option>
-              <option value="IN">Indiana</option>
-              <option value="IA">Iowa</option>
-              <option value="KS">Kansas</option>
-              <option value="KY">Kentucky</option>
-              <option value="LA">Louisiana</option>
-              <option value="ME">Maine</option>
-              <option value="MD">Maryland</option>
-              <option value="MA">Massachusetts</option>
-              <option value="MI">Michigan</option>
-              <option value="MN">Minnesota</option>
-              <option value="MS">Mississippi</option>
-              <option value="MO">Missouri</option>
-              <option value="MT">Montana</option>
-              <option value="NE">Nebraska</option>
-              <option value="NV">Nevada</option>
-              <option value="NH">New Hampshire</option>
-              <option value="NJ">New Jersey</option>
-              <option value="NM">New Mexico</option>
-              <option value="NY">New York</option>
-              <option value="NC">North Carolina</option>
-              <option value="ND">North Dakota</option>
-              <option value="OH">Ohio</option>
-              <option value="OK">Oklahoma</option>
-              <option value="OR">Oregon</option>
-              <option value="PA">Pennsylvania</option>
-              <option value="RI">Rhode Island</option>
-              <option value="SC">South Carolina</option>
-              <option value="SD">South Dakota</option>
-              <option value="TN">Tennessee</option>
-              <option value="TX">Texas</option>
-              <option value="UT">Utah</option>
-              <option value="VT">Vermont</option>
-              <option value="VA">Virginia</option>
-              <option value="WA">Washington</option>
-              <option value="WV">West Virginia</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WY">Wyoming</option>
-            </select>
-            </form>
+            {{form.state}}
+
+
         </div>
 
         <div class="col">
-          <form>
+
               <label for="zip"><b>Zip(Area) Code:</b></label>
-                <input type="text" name="zip" id="zip">
+                 {{form.state_zip}}
             </section>
-          </form>
+
         </div>
 
+        <div class="col">
+
+              <label for="Event"><b>Event volunteering for:</b></label>
+                 {{form.event_volunteering}}
+            </section>
+
+        </div>
 
     </div>
 
@@ -236,7 +214,7 @@ Sign up Page!
     <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
 
         <div class="col">
-        <form>
+
           <style>
           .newspaper {
             -webkit-column-count: 2; /* Chrome, Safari, Opera */
@@ -244,33 +222,20 @@ Sign up Page!
             column-count: 2;
           }
           </style>
-              <label for="Volunteer Iterests"><b>Please select the Volunteer Positions that interest you:</b></label>
-              <div class="newspaper">
-              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="food_pantry">Food Pantry</label></span><br/>
-              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="food_service">Food Service</label></span><br/>
-              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="senior_services">Senior Services</label></span><br/>
-              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="boy_girls_glub">Boy and Girls Club</label></span><br/>
-              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="food_distributions">Monthly Food Di stributions</label></span><br/>
-              <span style="white-space: nowrap;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="maintenance">Maintenance/House Keeping</label></span><br/>
-              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="life_skills">Life Skills (Teacher/Consultant)</label></span><br/>
-              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="shelter">Family Emergency Shelter</label></span><br/>
-              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="computer_lab">Computer Lab</label></span><br/>
-              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="closet">Clothes Closet</label></span><br/>
-              <span style="white-space: nowrap; margin:90px;"><input type="checkbox" name="data" value="some topic" id="some id" /><label for="other">Other</label></span><br/>
 
-              </div>
 
-          </form>
+
         </div>
 
         <div class="col"></div>
         <div class="col">
-          <form>
+
           <div class="form-group">
             <label for="comment"><b>Comment:</b></label>
-            <textarea class="form-control" rows="5" id="comment"></textarea>
+            {{form.comment}}
+
           </div>
-        </form>
+
         </div>
 
         </div>
@@ -283,8 +248,8 @@ Sign up Page!
   <div class="col"></div
 
   <div class="col">
-    <form class="form-inline">
-      <button align="center" type="button" class="btn btn-danger btn-lg">Submit Form</button>
+
+       <button align="center"  input type="submit" class="btn btn-danger btn-lg">Submit Form</button>
     </form>
   </div>
 
@@ -293,5 +258,3 @@ Sign up Page!
 
   {% endblock %}
 <!--  </form> -->
-
-<!-- End of HTML Document -->
