Added working signup form

--- a/volunteerEPICS/volunteers/templates/volunteers/base.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <!-- Mikayla here, this base.html contains the navigation bar and the skyline image, this makes it so we can just extend this code across all html pages!>
 <!--Start of html document -->
