--- a/volunteerEPICS/volunteers/templates/volunteers/signup.html
+++ b/volunteerEPICS/volunteers/templates/volunteers/signup.html
@@ -1,260 +1,21 @@
-<!DOCTYPE html>
-<!--Start of html document -->
-
 {% extends 'volunteers/base.html'%}
 
-{%block title %}
-Sign up Page!
-{% endblock %}
 
 
+{% block content%}
+<div class="container">
 
-{%block content %}
 
 
+<form section="register" method="POST">
+{% csrf_token %}
 
-<!---------------------------------------------------------------->
-<!--       Head is the items included in the top of the page    -->
-<!---------------------------------------------------------------->
 
-      <!------------------------------------>
-      <!--Creation of the Donation Button -->
-      <!------------------------------------>
+{{form.as_p}}
 
 
 
-    <h2 align="center">Volunteer Registration Form</h2>
-
-  </head>
-
-<!--  Kim, Mikayla and James, ignore the <br>, all they do is seperate the -->
-<!-- page for organization -->
-<!---------------------------------------------------------------->
-
-<br>
-<br>
-<!----------------------------------------------------------------->
-
-
-<!-------------------------------------------------->
-<!-- Creation of Form for Signing In Volunteers ---->
-<!--Kim and James this is the most important ------>
-<!--section for you guys. ------------------------->
-<!------------------------------------------------->
-
-<body>
-   <!-- <form> -->
-    <!--First name and Last name text box -->
-    <div class="container">
-
-      <!-------------------------------------------------------------------->
-      <!-- Creates an invisible table to organize content-->
-      <!-- This section of the code will make a 1 x 4 table to organize -->
-      <!-- the textboxes for First and Last name -->
-      <!-------------------------------------------------------------------->
-
-      <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
-        <!--Create the first column-->
-
-        <!--Creates the second column which has the First Name Textbox -->
-        <!--------------------------------------------------------------->
-        <!--    This is the first name Data Set --->
-  <div class="col">
-        <form action"" method="post">
-          {% csrf_token %}
-          <label for="username"><b>Username:</b></label>
-          <section class="username">
-            {{form.username}}
-          </section>
-
-
-        </div>
-        <!---------------------------------------------------------------->
-
-        <!--Creates the third column which has the Last name textbox -->
-        <!------------------------------------------------------------->
-        <!--  This  is the last name Data Set -->
-
-        <div class="col">
-          <label for="name"><b>First Name:</b></label>
-          <section class="first_name">
-            {{form.First_name}}
-          </section>
-
-
-        </div>
-        <!----------------------------------------------------------------->
-
-        <div class="col">
-        <!-- Creates the second column for Phone Number input-->
-        <!----------------------------------------------------->
-        <!-- This is the phone number Data set -->
-
-        <section class="last_name">
-          <label for="name"><b>Last Name:</b></label>
-            {{form.Last_name}}
-        </section>
-
-        </div>
-
-        <div class="col">
-        <b>Gender:</b> {{form.gender}}
-          </div>
-
-          <div class="col">
-            <b>Date of Birth:</b> {{form.birth_date}}
-          </div>
-
-
-        <div class="col">
-          <section class="phone_number">
-            <label for="phone"><b>Phone Number:</b></label>
-              {{form.phone}}
-          </section>
-
-
-        </div>
-
-      </div>
-
-      <br>
-
-      <br>
-
-    <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
-
-      <div class="col">
-        <section class="email">
-          <label for="email"><b>Email Address:</b></label>
-            {{form.email}}
-        </section>
-
-
-      </div>
-
-      <div class="col">
-        <section class="emergency">
-          <label for="contact"><b>Emergency Contact Name:</b></label>
-           {{form.employer_name}}
-          </section>
-
-
-      </div>
-
-      <div class="col">
-
-        <section class="emerg_num">
-          <label for="emerg_num"><b>Emergency Contact Number:</b></label>
-            {{form.emergency_contact_phone}}
-        </section>
-
-
-
-      </div>
-
-      <div class="col">
-
-
-        <div class="col">
-
-          <section class="employ_name">
-            <label for="employ_name"><b>Employer Name:</b></label>
-              {{form.employer_name}}
-          </section>
-
-        </div>
-
-
-      </div>
-
-      <div class="col"></div>
-
-    </div>
-
-    <br>
-
-    <br>
-
-    <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
-
-
-
-
-
-        <div class="col">
-
-            <label for="state"><b>State (Residency):</b></label>
-            {{form.state}}
-
-
-        </div>
-
-        <div class="col">
-
-              <label for="zip"><b>Zip(Area) Code:</b></label>
-                 {{form.state_zip}}
-            </section>
-
-        </div>
-
-        <div class="col">
-
-              <label for="Event"><b>Event volunteering for:</b></label>
-                 {{form.event_volunteering}}
-            </section>
-
-        </div>
-
-    </div>
-
-    <br>
-    <br>
-    <br>
-
-    <div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
-
-        <div class="col">
-
-          <style>
-          .newspaper {
-            -webkit-column-count: 2; /* Chrome, Safari, Opera */
-            -moz-column-count: 2; /* Firefox */
-            column-count: 2;
-          }
-          </style>
-
-
-
-        </div>
-
-        <div class="col"></div>
-        <div class="col">
-
-          <div class="form-group">
-            <label for="comment"><b>Comment:</b></label>
-            {{form.comment}}
-
-          </div>
-
-        </div>
-
-        </div>
-
-    <br>
-    <br>
-
-<div class="row align-items-center row-cols-1 row-cols-sm-2 row-cols-md-4">
-
-  <div class="col"></div
-
-  <div class="col">
-
-       <button align="center"  input type="submit" class="btn btn-danger btn-lg">Submit Form</button>
-    </form>
+<button type="submit">Register</button>
+</form>
   </div>
-
-  <div class="col"></div>
-  </div>
-
-  {% endblock %}
-<!--  </form> -->
+{%endblock%}
